// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiSelectableListItem is rendered 1`] = `
<li
  aria-label="aria-label"
  aria-selected="false"
  class="ouiSelectableListItem testClass1 testClass2"
  data-test-subj="test subject string"
  role="option"
>
  <span
    class="ouiSelectableListItem__content"
  >
    <span
      class="ouiSelectableListItem__icon"
      data-ouiicon-type="empty"
    />
    <span
      class="ouiSelectableListItem__text"
    />
  </span>
</li>
`;

exports[`OuiSelectableListItem props append 1`] = `
<li
  aria-selected="false"
  class="ouiSelectableListItem"
  role="option"
>
  <span
    class="ouiSelectableListItem__content"
  >
    <span
      class="ouiSelectableListItem__icon"
      data-ouiicon-type="empty"
    />
    <span
      class="ouiSelectableListItem__text"
    />
    <span
      class="ouiSelectableListItem__append"
    >
      <span />
       
    </span>
  </span>
</li>
`;

exports[`OuiSelectableListItem props checked is off 1`] = `
<li
  aria-selected="true"
  class="ouiSelectableListItem"
  role="option"
>
  <span
    class="ouiSelectableListItem__content"
  >
    <span
      class="ouiSelectableListItem__icon"
      color="text"
      data-ouiicon-type="cross"
    />
    <span
      class="ouiSelectableListItem__text"
    />
  </span>
</li>
`;

exports[`OuiSelectableListItem props checked is on 1`] = `
<li
  aria-selected="true"
  class="ouiSelectableListItem"
  role="option"
>
  <span
    class="ouiSelectableListItem__content"
  >
    <span
      class="ouiSelectableListItem__icon"
      color="text"
      data-ouiicon-type="check"
    />
    <span
      class="ouiSelectableListItem__text"
    />
  </span>
</li>
`;

exports[`OuiSelectableListItem props disabled 1`] = `
<li
  aria-disabled="true"
  aria-selected="false"
  class="ouiSelectableListItem"
  role="option"
>
  <span
    class="ouiSelectableListItem__content"
  >
    <span
      class="ouiSelectableListItem__icon"
      data-ouiicon-type="empty"
    />
    <span
      class="ouiSelectableListItem__text"
    />
  </span>
</li>
`;

exports[`OuiSelectableListItem props isFocused 1`] = `
<li
  aria-selected="false"
  class="ouiSelectableListItem ouiSelectableListItem-isFocused"
  role="option"
>
  <span
    class="ouiSelectableListItem__content"
  >
    <span
      class="ouiSelectableListItem__icon"
      data-ouiicon-type="empty"
    />
    <span
      class="ouiSelectableListItem__text"
    />
    <span
      class="ouiSelectableListItem__append"
    >
       
      <span
        aria-hidden="true"
        class="ouiBadge ouiBadge--hollow ouiBadge--iconLeft ouiSelectableListItem__onFocusBadge"
      >
        <span
          class="ouiBadge__content"
        >
          <span
            class="ouiBadge__icon"
            color="inherit"
            data-ouiicon-type="returnKey"
          />
        </span>
      </span>
    </span>
  </span>
</li>
`;

exports[`OuiSelectableListItem props onFocusBadge can be custom 1`] = `
<li
  aria-selected="false"
  class="ouiSelectableListItem"
  role="option"
>
  <span
    class="ouiSelectableListItem__content"
  >
    <span
      class="ouiSelectableListItem__icon"
      data-ouiicon-type="empty"
    />
    <span
      class="ouiSelectableListItem__text"
    />
  </span>
</li>
`;

exports[`OuiSelectableListItem props onFocusBadge can be true 1`] = `
<li
  aria-selected="false"
  class="ouiSelectableListItem"
  role="option"
>
  <span
    class="ouiSelectableListItem__content"
  >
    <span
      class="ouiSelectableListItem__icon"
      data-ouiicon-type="empty"
    />
    <span
      class="ouiSelectableListItem__text"
    />
  </span>
</li>
`;

exports[`OuiSelectableListItem props prepend 1`] = `
<li
  aria-selected="false"
  class="ouiSelectableListItem"
  role="option"
>
  <span
    class="ouiSelectableListItem__content"
  >
    <span
      class="ouiSelectableListItem__icon"
      data-ouiicon-type="empty"
    />
    <span
      class="ouiSelectableListItem__prepend"
    >
      <span />
    </span>
    <span
      class="ouiSelectableListItem__text"
    />
  </span>
</li>
`;

exports[`OuiSelectableListItem props showIcons can be turned off 1`] = `
<li
  aria-selected="false"
  class="ouiSelectableListItem"
  role="option"
>
  <span
    class="ouiSelectableListItem__content"
  >
    <span
      class="ouiSelectableListItem__text"
    />
  </span>
</li>
`;
